2001-04-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/msyslog.c:
	* ElectricFence/page.c (stringErrorReport): Follow Rainer's lead
	and use strerror().

	* ntpd/refclock_shm.c (shm_start): Always use strerror. 
	* libntp/msyslog.c (msyslog): Use strerror if present. 
	From: Rainer Orth  <ro@TechFak.Uni-Bielefeld.
	
	* ntpd/ntp_config.c (getconfig): Read stratum fudge value into 
	long variable.
	From: Rainer Orth <ro@TechFak.Uni-Bielefeld.DE> 

	* libparse/parsesolaris.c (rdchar): Cast ~0 to unsigned long. 
	* libntp/buftvtots.c (buftvtots): Allow for 8-byte tv_sec, tv_usec 
	in struct timeval.
	From: Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

2001-04-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c (getconfig): move "tinker" so it's generally
	available.

2001-04-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Look for getclock().

	* ntpd/ntp_config.c (getconfig): Squawk if provided minpoll or
	maxpoll values are out of range.

	* ntpd/ntp_proto.c (poll_update): Some operations can only be done
	if we're compiling with some REFCLOCKs.
	From Dave Mills.

	* configure.in (RSASRCS): Added.
	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Use RSASRCS.

	* configure.in: Limit the DECL_HSTRERROR_0 to aix4.3.*.  RSN, we
	could also limit it to xlc...

	* configure.in: 4.0.99k25

	* html/leap.htm: Added.
	* html/index.htm: Update.
	* html/driver7.htm: Update.
	* html/driver6.htm: Update.
	* html/driver36.htm: Update.
	* html/audio.htm: Update.
	* html/y2k.htm: Removed.
	From Dave Mills.

2001-04-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h: Lose extra declarations of PACKAGE and VERSION.

	* acconfig.h: 
	* configure.in:
	* include/l_stdlib.h: DECL_HSTRERROR_0 needed for xlc under AIX 4.3.2.
	Reported by: Harald Barth <haba@pdc.kth.se>

	* ntpd/ntp_proto.c (proto_config): cal_enable (PROTO_CAL) is
	invalid if no refclocks are present.
	From: Frodo Looijaard <frodol@dds.nl>
